# python-poppler-qt5

./: .gitignore  ChangeLog  INSTALL  LICENSE  MANIFEST.in  README.rst  TODO  demo.py  poppler-annotation.sip  poppler-convert.sip  poppler-document.sip  poppler-embedded-file.sip  poppler-font-info.sip  poppler-font-iterator.sip  poppler-form.sip  poppler-link-destination.sip  poppler-link.sip  poppler-media.sip  poppler-movie-object.sip  poppler-opt-content-model.sip  poppler-page-transition.sip  poppler-page.sip  poppler-qt5.sip  poppler-sound-object.sip  poppler-text-box.sip  popplerqt5.py  project.py  pyproject.toml  setup.py  timeline.sip  types.sip  version.sip.in
.github/workflows/: build_wheels.yml
ci/: README.md  build.sh
ci/environment/: README.md  conda-lock.yml  environment.yml
demo/: demo.py  merge-annotations.py
