[build-system]
requires = [
  "sip >= 6.7.9",
  "PyQt-builder",
  "PyQt5",
  "PyQt5-Qt5",
]
build-backend = "sipbuild.api"

[tool.sip.metadata]
name = "python-poppler-qt5"
version = "21.3.0"
summary = "A Python binding to Poppler-Qt5"
description-file = "README.rst"
home-page = "https://github.com/frescobaldi/python-poppler-qt5"
maintainer = "Wilbert Berendsen"
maintainer-email = "wbsoft@xs4all.nl"
license = "LGPL"
classifier = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics :: Viewers"
]
requires-dist = [
  # sync with ci/environment/environment.yml
  "PyQt5 >= 5.15",
]

[tool.sip.builder]
qmake-settings = [
  "CONFIG += c++17",
]

[tool.sip.project]
sip-files-dir = "."
sdist-excludes = [
  "version.sip",
  ".git/*",
  ".git/*/*",
  ".git/*/*/*",
  ".git/*/*/*/*",
  ".git/*/*/*/*/*",
  ".git/*/*/*/*/*/*",
  ".git/*/*/*/*/*/*/*"
]
